Place the italicized text that goes with plant group and subgroup names on its own line to stop awkward wrapping.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1482 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -475,9 +475,11 @@ Plant Listing Styles
 	line-height: 90%;
 }
 .list-item h3 span {
+    color: #807121;
+    display: block;
 	font-size: 12px;
 	font-style: italic;
-	color: #807121;	
+    margin-top: 4px;
 }
 .img-gallery {
 	position: relative;
